# bcoll

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/bcoll/: bcoll.py  config.py  epubparse.py  parse.py  pdfparse.py
