[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bcoll"
version = "0.0.1"
authors = [ 
  { name="George", email="gk_coder@icloud.com" },
]
description = "A small tool for managing your book collection"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E"]
dependencies = [
	"art>=6.5",
	"PyTermGUI",
	"ebooklib",
	"lxml",
        "pypdf",
	"blessed",
	"questionary>=2.1",
	"prompt-toolkit",
	"textual",
	# "trogon"
]

[project.scripts]
bcoll = "bcoll.bcoll:main"

[project.urls]
Homepage = "https://github.com/georgek-dev/bcoll"
Issues = "https://github.com/georgek-dev/bcoll/issues"
