[project]
name = "bcoll"
version = "0.0.1"
description = "A small tool for managing your book collection"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E"]
authors = [
  { name = "George", email = "gk_coder@icloud.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = ["art>=6.5", "ebooklib", "lxml", "pypdf", "rich"]

[project.urls]
Homepage = "https://github.com/georgek-dev/bcoll"
Issues = "https://github.com/georgek-dev/bcoll/issues"

[project.scripts]
bcoll = "bcoll.bcoll:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
